--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "Cristian Kiss (https://github.com/ckiss)"
   ],
   "scripts": {
-    "test": "lab test/*.test.js -r console -v -L -m 3000",
+    "test": "lab test/*.test.js -r console -v -L -m 3000 -t 88",
     "annotate": "docco redis-queue-transport.js -o doc"
   },
   "keywords": [
@@ -30,13 +30,13 @@
     "url": "https://github.com/senecajs/seneca-redis-queue-transport/issues"
   },
   "dependencies": {
-    "redis": "0.12.1",
+    "redis": "2.x.x",
     "lodash": "3.3.1"
   },
   "devDependencies": {
-    "async": "0.9.0",
+    "async": "1.x.x",
     "docco": "0.7.0",
-    "lab": "6.2.0",
+    "lab": "6.x.x",
     "seneca": "plugin",
     "seneca-transport-test": "0.1.2"
   },
