--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "Cristian Kiss (https://github.com/ckiss)"
   ],
   "scripts": {
-    "test": "lab test/*.test.js -r console -v -L -m 3000 -t 88",
+    "test": "./node_modules/.bin/lab test/*.test.js -r console -v -L -m 3000 -t 88",
+    "lint": "./node_modules/.bin/lab -P test -dL",
     "annotate": "docco redis-queue-transport.js -o doc"
   },
   "keywords": [
@@ -36,6 +37,9 @@
   "devDependencies": {
     "async": "1.x.x",
     "docco": "0.7.0",
+    "eslint-config-seneca": "1.x.x",
+    "eslint-plugin-hapi": "2.x.x",
+    "eslint-plugin-standard": "1.x.x",
     "lab": "6.x.x",
     "seneca": "plugin",
     "seneca-transport-test": "0.1.2"
