--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "url": "https://github.com/senecajs/seneca-redis-queue-transport/issues"
   },
   "dependencies": {
-    "redis": "2.x.x",
-    "lodash": "3.3.1"
+    "lodash": "3.3.1",
+    "redis": "2.x.x"
   },
   "devDependencies": {
     "async": "1.x.x",
