--- a/package.json
+++ b/package.json
@@ -31,14 +31,13 @@
     "url": "https://github.com/senecajs/seneca-redis-queue-transport/issues"
   },
   "dependencies": {
-    "lodash": "3.3.1",
+    "lodash": "3.x.x",
     "redis": "2.x.x"
   },
   "devDependencies": {
     "async": "1.x.x",
     "docco": "0.7.0",
     "eslint-config-seneca": "1.x.x",
-    "eslint-plugin-hapi": "2.x.x",
     "eslint-plugin-standard": "1.x.x",
     "lab": "6.x.x",
     "seneca": "plugin",
