--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/senecajs/seneca-redis-queue-transport/issues"
   },
   "dependencies": {
-    "lodash": "3.x.x",
+    "lodash": "4.x.x",
     "redis": "2.x.x"
   },
   "devDependencies": {
@@ -41,8 +41,8 @@
     "eslint-config-seneca": "1.x.x",
     "eslint-plugin-standard": "1.x.x",
     "lab": "6.x.x",
-    "seneca": "plugin",
-    "seneca-transport-test": "0.1.2"
+    "seneca": "1.1.0",
+    "seneca-transport-test": "0.1.3"
   },
   "files": [
     "README.md",
