Updates - gitignore docs/annotated - gitignore docs/coverage.html - Updated travis file to test with different seneca versions - Updated travis to test with node 6 - Updated travis to run coveralls after tests - Updated contributors - Added coverage and coveralls scripts - Added pre-commit - Updated readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: node_js
-node_js:
-  - "0.10"
-  - "0.12"
-  - "4"
-  - "5"
+
 services:
   - redis-server
+
+env:
+  - SENECA_VER=@1.x.x
+  - SENECA_VER=@2.x.x
+  - SENECA_VER=@3.x.x
+
+node_js:
+  - "4"
+  - "6"
+
+before_script:
+  - npm uninstall seneca
+  - npm install seneca$SENECA_VER
+
+after_script:
+  - npm run coveralls
