--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "license": "MIT",
   "author": "Ianto Cristian",
   "contributors": [
-    "Ianto Cristian",
+    "Ianto Cristian (https://github.com/iantocristian)",
     "Richard Rodger (http://richardrodger.com)",
-    "Cristian Kiss (https://github.com/ckiss)"
+    "Cristian Kiss (https://github.com/ckiss)",
+    "Wyatt Preul (https://github.com/geek)",
+    "Josh Reeter (https://github.com/jreeter)",
+    "Shane Lacey (https://github.com/shanel262)"
   ],
   "scripts": {
-    "test": "lab test/*.test.js -r console -v -L -m 3000 -t 95",
+    "test": "lab test/*.test.js -r console -v -L -m 3000 -t 95 -c",
     "lint": "lab -P test -dL",
-    "annotate": "docco redis-queue-transport.js -o doc",
+    "annotate": "docco redis-queue-transport.js -o docs/annotated",
     "build": "docker-compose build",
     "start": "docker-compose up",
-    "stop": "docker-compose kill"
+    "stop": "docker-compose kill",
+    "coveralls": "lab -s -P test -r lcov | coveralls",
+    "coverage": "lab -v -P test -L -t 95 -r html > docs/coverage.html"
   },
   "keywords": [
     "seneca",
@@ -40,10 +45,12 @@
   "devDependencies": {
     "async": "1.x.x",
     "code": "1.x.x",
+    "coveralls": "2.11.x",
     "docco": "0.7.0",
     "eslint-config-seneca": "1.x.x",
     "eslint-plugin-standard": "1.x.x",
     "lab": "6.x.x",
+    "pre-commit": "1.1.x",
     "seneca": "1.1.0",
     "seneca-transport-test": "0.1.3"
   },
@@ -51,5 +58,8 @@
     "README.md",
     "LICENSE.txt",
     "redis-queue-transport.js"
+  ],
+  "pre-commit": [
+    "test"
   ]
 }
