--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "Wyatt Preul (https://github.com/geek)",
     "Josh Reeter (https://github.com/jreeter)",
     "Shane Lacey (https://github.com/shanel262)",
-    "David Gonzalez (https://github.com/dgonzalez)"
+    "David Gonzalez (https://github.com/dgonzalez)",
+    "Arsen A. Gutsal(https://github.com/softsky)"
   ],
   "scripts": {
     "test": "lab test/*.test.js -r console -v -L -m 3000 -t 89 -c",
