--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "docker-compose up",
     "stop": "docker-compose kill",
     "coveralls": "lab -s -P test -r lcov | coveralls",
-    "coverage": "lab -v -P test -L -t 89 -r html > docs/coverage.html"
+    "coverage": "lab -v -P test -L -t 89 -r html > docs/coverage.html",
+    "prettier": "prettier --write --no-semi --single-quote redis-queue-transport.js test/*.js"
   },
   "keywords": [
     "seneca",
@@ -51,7 +52,7 @@
     "eslint-config-seneca": "3.x.x",
     "eslint-plugin-standard": "2.x.x",
     "lab": "11.x.x",
-    "pre-commit": "1.1.x",
+    "prettier": "^1.10.2",
     "seneca": "plugin",
     "seneca-transport-test": "0.1.3"
   },
@@ -59,8 +60,5 @@
     "README.md",
     "LICENSE.txt",
     "redis-queue-transport.js"
-  ],
-  "pre-commit": [
-    "test"
   ]
 }
